update header, fooder, skeleton home page

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,33 @@
 <%- include('./partials/header.ejs') %>
 
-<h1>Home</h1>
+<h1>Enhance your life</h1>
+<h3>optomize your time</h3>
+
+<a href="/unicorns/new">ADD UNICORN</a>
+
+
+<div>
+    <section>
+        <h4>Build a community</h4>
+        <h3>Connect with like minds</h3>
+        <p>Productivity app allows you to connect with others who have similar goals, share ecouragement, support, and best practices</p>
+    </section>
+    
+    <section>
+        <h4>Manage your time</h4>
+        <h3>Create tasks and reminders</h3>
+        <p>productivity app allows for a full integrated calender to track task, and set due dates allowing you to structure you days and manage your time.</p>
+    </section>
+    
+    <section>
+        <h4>Track your progress</h4>
+        <h3>What gets tracked, gets improved</h3>
+        <p>Productivity app Tracks your completion rate for task, time remaining, along with ordering tasks by time and dead line.</p>
+    </section>
+
+
+</div>
+
+<p></p>
 
 <%- include('./partials/footer.ejs') %>
