--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="/css/main.css">
-  <title>Express Starter</title>
+  <title>ElevateMe</title>
 </head>
 <body>
   <nav>
     <a href="/">🏠</a>
     <div>
-      <a href="/unicorns">ALL UNICORNS</a>
+      
       <% if (user) { %>
         <a href="/unicorns/new">ADD UNICORN</a>
         <a href="/auth/sign-out">SIGN OUT</a>
@@ -20,5 +20,7 @@
         <a href="/auth/sign-in">SIGN IN</a>
       <% } %>
     </div>
+
+
   </nav>
   <main>
