created  goals model

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
       
       <% if (user) { %>
         <a href="/user/index">🏠</a>
-        <a href="/unicorns/new">ADD UNICORN</a>
+        <!-- <a href="/unicorns/new">ADD UNICORN</a> -->
         <a href="/auth/sign-out">SIGN OUT</a>
         <span><%= user.name %></span>
         <% } else { %>
