--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -4,7 +4,21 @@
     
 <h1>profile home page</h1>
 
-
+<div>
+    <h3>todays task</h3>
+    <ul>
+        <li>test</li>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+    </ul>
+    <h3>future task</h3>
+    <ul>
+        <li>test</li>
+        <li>test</li>
+        <li>test</li>
+    </ul>
+</div>
 
 
 
