--- a/public/css/main.css
+++ b/public/css/main.css
@@ -12,7 +12,7 @@ body {
 
 nav,
 footer {
-  background-color: lightblue;
+  background-color: rgb(51, 51, 51);
   display: flex;
   justify-content: space-between;
   align-items: center;
