--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,14 +8,13 @@
 </head>
 <body>
   <nav>
-    <div>
-      
+    <div class="header">
       
       <% if (user) { %>
         <a href="/user/index">🏠</a>
-        <!-- <a href="/unicorns/new">ADD UNICORN</a> -->
+        <a href="/user/new">Create a new Goal</a>
         <a href="/auth/sign-out">SIGN OUT</a>
-        <span><%= user.name %></span>
+        <span>welcome, <%= user.name %></span>
         <% } else { %>
         <a href="/">🏠</a>
         <a href="/auth/sign-up">SIGN UP</a>
