--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -2,9 +2,21 @@
 
 <body>
     
-<h1>profile home page</h1>
+<h1>Welcome, <%= user.name %></h1>
 
-<div>
+    <% if (goals.length > 0) { %>
+        <ul>
+            <% goals.forEach(goal => { %>
+            <li>Your goal: <%= goal.name %> (<%= goal.Type %>)</li>
+            <% }) %>
+        </ul>
+    <% } else { %>
+    <p>You have no goals yet.</p>
+    <% } %>
+
+
+
+<div class = 'activity'>
     <h3>todays task</h3>
     <ul>
         <li>test</li>
@@ -12,13 +24,7 @@
         <li>2</li>
         <li>3</li>
     </ul>
-    <h3>future task</h3>
-    <ul>
-        <li>test</li>
-        <li>test</li>
-        <li>test</li>
-    </ul>
-</div>
+
 
 
 
