--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -14,17 +14,23 @@
     <% } else { %>
     <p>You have no goals yet.</p>
     <% } %>
+
+    <a href="/user/goalsIndex">Manage my goals</a>
 </div>
 
 
 <div class = 'taskbar'>
-    <h3>todays task</h3>
-    <ul>
-        <li>test</li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-    </ul>
+    <h3>task</h3>
+    <% if (goals.task) { %>
+            <ul class = 'taskbar'>
+                <% goals.task.forEach(task => { %>
+                <li>Your task: <%= task.name %> (<%= task.Type %>)</li>
+                <% }) %>
+            </ul>
+        <% } else { %>
+        <p>You have no task yet. lets make a <a href="/user/newTask">new task</a></p>
+        <% } %>
+
 </div>
 
 
