--- a/views/user/goals/firstGoal.ejs
+++ b/views/user/goals/firstGoal.ejs
@@ -1,4 +1,4 @@
-<%- include('../partials/header.ejs') %>
+<%- include('../../partials/header') %>
 
 <body>
     <p>
@@ -29,4 +29,4 @@ Do you want your first goal to focus on improving your mind or your body?
 
 </body>
 
-<%- include('../partials/footer.ejs') %>
+<%- include('../../partials/footer.ejs') %>
