bug fixs started task creation

--- a/views/user/goals/firstGoal.ejs
+++ b/views/user/goals/firstGoal.ejs
@@ -13,7 +13,7 @@ Do you want your first goal to focus on improving your mind or your body?
 
 <form action="/user" method="POST">
 
-    <label for="name">name your goal, remember to be 'Specific' but concise .<br>ex. lose 10lbs, Learn spanish:</label>
+    <label for="name">Name your goal, remember to be 'Specific' but concise.<br>Ex. lose 10lbs, Learn Spanish:</label>
     <input type="text" name="name" id="name" />
 
     <label for="Type">Goal type:</label>
