finish task show functionality

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -36,6 +36,7 @@
     <% } else { %>
         <p>You have no goals yet. Let's make a <a href="/user/new">new goal</a>.</p>
     <% } %>
+    <a href="/user/task/index">Manage my Task</a>
 </div>
 
 
