finish read and delete functions for task

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -37,6 +37,7 @@
         <p>You have no goals yet. Let's make a <a href="/user/new">new goal</a>.</p>
     <% } %>
     <a href="/user/task/index">Manage my Task</a>
+    <a href="/user/newTask">New Task</a>
 </div>
 
 
