full crud for task

--- a/views/user/task/edit.ejs
+++ b/views/user/task/edit.ejs
@@ -32,12 +32,12 @@
     </select>
 
 
-    <select name="goalId" required>
+    <!-- <select name="goalId" required>
         <option value="">what Goal does this task support?</option>
         <% goals.forEach(goal => { %>
             <option value="<%= goal._id %>"><%= goal.name %> (<%= goal.Type %>)</option>
         <% }) %>
-    </select>
+    </select> -->
 
   
 
