--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,6 +1,6 @@
 * {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
+box-sizing: border-box;
+font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
@@ -8,8 +8,9 @@ body {
   height: 100vh;
   display: grid;
   grid-template-rows: auto 1fr auto;
-}
-
+  }
+  
+  
 nav,
 footer {
   background-color: rgb(51, 51, 51);
@@ -17,7 +18,7 @@ footer {
   justify-content: space-between;
   align-items: center;
   padding: 2vmin;
-  font-size: 2vh;
+  font-size: 2vmin;
   color: lightslategray;
 }
 
@@ -25,7 +26,7 @@ nav a {
   text-decoration: none;
   color: slategray;
   background-color: white;
-  padding: 1vmin;
+  padding: .5vmin;
   border-radius: 1vmin;
 
   &:hover {
@@ -38,7 +39,8 @@ nav a {
 nav span {
   font-size: 1.5vmin;
   color: lightslategray;
-}
+  }
+  
 
 main {
   display: flex;
@@ -46,7 +48,7 @@ main {
   align-items: center;
   margin-top: 1vmin;
 }
-
+  
 form {
   display: grid;
   grid-template-columns: auto auto;
@@ -57,8 +59,9 @@ form * {
   font-size: 2vmin;
   padding: 1vmin;
   border-radius: 1vmin;
-}
-
+  }
+  
+  
 input,
 textarea,
 select {
@@ -78,68 +81,31 @@ button:hover {
   color: rgb(223, 116, 116);
 }
 
+  .HP {
+    display: flex;
+    flex-direction: row;
+    width: 85%;
+    height: 85%;
+    margin-bottom: 1vmin;
+    
+  }
 
+  .left-column {
+    
+    width: 40vmin;
+  }
 
+  .right-column {
+  width: 100%;
+  height: 100%;
+  }
 
-.HP {
-  height: auto;
-  width: auto;
-  display: flex;
-  justify-content: space-between; 
-  align-items: flex-start;
-  gap: 40px; 
+  .goals {
+    border-style: solid;
+    border: black;
+    border-radius: .25vmin;
+  }
+
+  .fc .fc-scrollgrid-liquid {
+    height: 85%;
 }
-
-
-.goals, .taskbar {
-  width: 300px;
-  background-color: #d6d6d6;
-  padding: 20px;
-  border: 1px solid #000000;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-  margin: .5vmin;
-}
-
-
-.goals h3,
-.taskbar h3 {
-  margin-top: 0;
-  color: #007acc;
-}
-
-.goals ul, .taskbar ul {
-  list-style: disc;
-  padding-left: 20px;
-}
-
-.goals li, .taskbar li {
-  margin-bottom: 10px;
-}
-
-.goals a,
-.taskbar a {
-  display: inline-block;
-  margin-top: 10px;
-  color: #007acc;
-  text-decoration: none;
-}
-
-.goals a:hover,
-.taskbar a:hover {
-  text-decoration: underline;
-}
-
-
-#calendar {
-  max-width: 900px;
-  margin: 20px auto;
-  height: 600px;
-  background-color: #ffffff;
-  padding: 20px;
-  border: 1px solid #000000;
-  border-radius: 12px;
-  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.05);
-}
-
-
