--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -6,32 +6,33 @@
       <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.17/index.global.min.js'></script>
       <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/core@6.1.17/index.global.min.js'></script>
       <script src='https://cdn.jsdelivr.net/npm/@fullcalendar/daygrid@6.1.17/index.global.min.js'></script>
+
+      
       <script>
+
+        <% if (typeof tasks !== 'undefined') { %>
+            const tasks = <%- JSON.stringify(tasks) %>;
+          <% } else { %>
+            const tasks = [];
+          <% } %>
 
       document.addEventListener('DOMContentLoaded', function() {
         var calendarEl = document.getElementById('calendar');
         var calendar = new FullCalendar.Calendar(calendarEl, {
           initialView: 'dayGridMonth',
-          events: [
-            {
-              id: '1', 
-              title: 'white bread',
-              start: '2025-05-22T14:10:00',
-              end: '2025-05-24T14:20:00',
-              //url: '/goals/:goalid',
-              allDay: false,
-            }
-          ]
+          events: tasks
         });
         calendar.render();
       });
+
+
 
     </script>
 
 
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
   <link rel="stylesheet" href="/css/main.css">
-  <title>Productivity app</title>
+  <title>ElevateSelf</title>
 </head>
 <body>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
