updated read me

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -46,7 +46,7 @@
         <a href="/user/new"><button type="button" class="btn btn-primary">Create a new Goal</button></a>
         <a class="sign-out" href="/auth/sign-out"><button type="button" class="btn btn-danger">SIGN OUT</button></a>
         <% } else { %>
-        <a href="/user/index"><button type="button" class="btn btn-primary">🏠Home</button></a>
+        <a href="/auth"><button type="button" class="btn btn-primary">🏠Home</button></a>
         <a href="/auth/sign-up"><button type="button" class="btn btn-primary">SIGN UP</button></a>
         <a href="/auth/sign-in"><button type="button" class="btn btn-primary">SIGN IN</button></a>
         
