--- a/public/css/main.css
+++ b/public/css/main.css
@@ -14,9 +14,18 @@ body {
 nav {
   background-color: rgb(51, 51, 51);
   display: flex;
-  padding: 1vmin;
+  /* padding: 1vmin; */
   justify-content: space-between;
   
+}
+.header {
+  display: flex;
+  justify-content: flex-end; 
+  align-items: center;        
+  gap: 5px;                  
+  /* padding: 1px; */
+  width: 100%;                
+  box-sizing: border-box;     
 }
 
 footer {
@@ -69,40 +78,41 @@ button:hover {
   color: rgb(223, 116, 116);
 }
 
-  .HP {
-    display: flex;
-    flex-direction: row;
-    width: 85%;
-    height: 85%;
-    margin-bottom: 1vmin;
-    
-  }
+.HP {
+  display: flex;
+  flex-direction: row;
+  width: 85%;
+  height: 85%;
+  margin-bottom: 1vmin;
+  
+}
 
-  .left-column {
-    
-    width: 40vmin;
-  }
+.left-column {
+  
+  width: 40vmin;
+}
 
-  .goals{
-    padding: 1vmin;
-  }
+.goals{
+  padding: 1vmin;
+}
 
-  .taskbar {
-    padding: 1vmin;
+.taskbar {
+  padding: 1vmin;
 
-  }
-  .taskbar button{
-    margin: 2px;
-  }
+}
+
+.taskbar button{
+  margin: 2px;
+}
+
+
+.right-column {
+width: 100%;
+height: 100%;
+}
+
  
- 
-  .right-column {
-  width: 100%;
-  height: 100%;
-  }
 
- 
-
-  .fc .fc-scrollgrid-liquid {
-    height: 85%;
+.fc .fc-scrollgrid-liquid {
+  height: 85%;
 }
