--- a/views/user/task/new.ejs
+++ b/views/user/task/new.ejs
@@ -7,11 +7,11 @@
     <label for="title">Title:</label>
     <input type="text" name="title" placeholder="Task Title" required>
 
-    <label for="start">start Date:</label>
-    <input type="date" name="start" required>
+    <label for="start">Start Date & Time:</label>
+    <input type="datetime-local" name="start" required>
 
-    <label for="end">Due Date:</label>
-    <input type="date" name="end" required>
+    <label for="end">End Date & Time:</label>
+    <input type="datetime-local" name="end" required>
     
     
 
