--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -41,7 +41,7 @@
   <nav>
     <div class="header">
 
-      <div class="d-flex justify-content-between align-items-center p-1 w-100">
+      <div class="d-flex justify-content-between align-items-center p- w-100">
 
         <div><a href="/"><img src="/images/logo.png" alt="Logo" height="90"></a></div>
         
@@ -52,7 +52,7 @@
               <a href="/user/new"><button type="button" class="btn btn-primary">Create a new Goal</button></a>
               <a class="sign-out" href="/auth/sign-out"><button type="button" class="btn btn-danger">SIGN OUT</button></a>
               <% } else { %>
-              <!-- <a href="/auth"><button type="button" class="btn btn-primary">🏠Home</button></a> -->
+              <a href="/auth"><button type="button" class="btn btn-primary">🏠Home</button></a>
               <a href="/auth/sign-up"><button type="button" class="btn btn-primary">SIGN UP</button></a>
               <a href="/auth/sign-in"><button type="button" class="btn btn-primary">SIGN IN</button></a>
               
