--- a/views/user/goals/index.ejs
+++ b/views/user/goals/index.ejs
@@ -1,24 +1,31 @@
 <%- include('../../partials/header') %>
 
-
-<body>
+<body class="bg-light py-4">
+  <div class="container">
     <% if (goals.length > 0) { %>
-        <ul class='goals'>
-            <% goals.forEach(goal => { %>
-                <li>
-                    <strong>Your goal:</strong> <%= goal.name %> (<%= goal.Type %>)
-
-                    <!-- Delete Goal Button -->
-                    <form action="/user/goals/<%= goal._id %>?_method=DELETE" method="POST"">
-                        <button type="submit">Delete</button>
-                    </form>
-                </li>
-            <% }) %>
-        </ul>
+      <div class="row">
+        <% goals.forEach(goal => { %>
+          <div class="col-md-6 mb-3">
+            <div class="card shadow-sm">
+              <div class="card-body d-flex justify-content-between align-items-center">
+                <div>
+                  <strong>Your goal:</strong> <span class="text-primary"><%= goal.name %></span> 
+                  <small class="text-muted">(<%= goal.Type %>)</small>
+                </div>
+                <form action="/user/goals/<%= goal._id %>?_method=DELETE" method="POST" onsubmit="return confirm('Are you sure you want to delete this goal?');">
+                  <button type="submit" class="btn btn-danger btn-sm" title="Delete Goal">
+                    <i class="bi bi-trash"></i> Delete
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
+        <% }) %>
+      </div>
     <% } else { %>
-        <p>You have no goals yet.</p>
+      <p class="text-center text-secondary fs-5">You have no goals yet.</p>
     <% } %>
+  </div>
 </body>
-
 
 <%- include('../../partials/footer.ejs') %>
