--- a/views/user/task/index.ejs
+++ b/views/user/task/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../../partials/header') %>
 
-<body class="bg-light py-4">
+<body >
   <div class="container">
     <% if (goals.length > 0) { %>
       <div class="row">
