--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -1,6 +1,43 @@
 <%- include('../partials/header.ejs') %>
 
 <body>
+
+     <script>
+
+        <% if (typeof tasks !== 'undefined') { %>
+            const tasks = <%- JSON.stringify(tasks) %>;
+          <% } else { %>
+            const tasks = [];
+          <% } %>
+          
+          
+          <% if (typeof dayGridPlugin !== 'undefined') { %>
+              const dayGridPlugin = <%- JSON.stringify(dayGridPlugin) %>;
+            <% } else { %>
+              const dayGridPlugin = null;
+            <% } %>
+
+
+      document.addEventListener('DOMContentLoaded', function() {
+        var calendarEl = document.getElementById('calendar');
+        var calendar = new FullCalendar.Calendar(calendarEl, {
+          plugins: FullCalendar.dayGrid,
+          initialView: 'dayGridMonth',
+          events: tasks,
+          headerToolbar: {
+            left: 'prev,next',
+            center: 'title',
+            right: 'dayGridDay,dayGridWeek,dayGridMonth' // user can switch between the two
+          }
+        });
+        calendar.render();
+      });
+
+
+
+    </script>
+
+
   <div class="container">
     <h1 class="mb-4">Welcome, <%= user.name %></h1>
 
