Remove .env file and add to .gitignore

--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -27,7 +27,7 @@
           headerToolbar: {
             left: 'prev,next',
             center: 'title',
-            right: 'dayGridDay,dayGridWeek,dayGridMonth' // user can switch between the two
+            right: 'dayGridDay,dayGridWeek,dayGridMonth' 
           }
         });
         calendar.render();
